chore(all): add more Map examples

--- a/sample/src/samples/map/binding-markers-to-remote-data.html
+++ b/sample/src/samples/map/binding-markers-to-remote-data.html
@@ -1,7 +1,7 @@
 <template>
   <div id="example">
     <div id="map-binding-markers-to-remote-data">
-      <div style="text-align: center;">
+      <div style="text-align: center">
         <k-map k-center.bind = "center"
                k-zoom.bind = 15
                k-layers.bind = "layers">
