--- a/sample/src/samples/map/binding-to-geojson.html
+++ b/sample/src/samples/map/binding-to-geojson.html
@@ -1,8 +1,11 @@
 <template>
   <div id="example">
     <div id="map-binding-to-geojson">
-      <div style="text-align: center;">
-         <h4>Map binding-to-geojson</h4>
+      <div style="text-align: center">
+        <k-map k-center.bind = "center"
+               k-zoom.bind = 3
+               k-layers.bind = "layers">
+        </k-map>
       </div>
     </div>
    </div>
