chore(all): trivial fixes

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -133,7 +133,8 @@
                   <br>
                   DIAGRAMS & MAPS                                            <br>
                   <a>Diagram</a>                                             <br>
-                  <a>Map</a>                                                 <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/map">Map</a>                            <br>
                   <br>
                   SCHEDULING                                                 <br>
                   <img src="images/blue.png">
