--- a/sample/src/samples/dropdownlist/customizing-templates.html
+++ b/sample/src/samples/dropdownlist/customizing-templates.html
@@ -8,6 +8,7 @@
                             k-data-value-field="CustomerID"
                             k-height="400"
                             k-data-source.bind="dataSource"
+                            id="customersdropdown"
                             style="width: 100%">
             <k-template for="headerTemplate">
               <div class="dropdown-header k-widget k-header">
