--- a/sample/src/samples/colorpicker/api.html
+++ b/sample/src/samples/colorpicker/api.html
@@ -1,38 +1,40 @@
 <template>
-   <div class="demo-section k-content">
-       <label for="colorpicker">ColorPicker:</label>
-       <input k-color-picker="k-widget.two-way: colorPicker; k-tool-icon: k-foreColor; k-value.two-way: color" />
-   </div>
-   <div class="box">
-       <div class="box-col">
-         <h4>Values</h4>
-         <ul class="options">
-             <li>
-                 <input ref="colorInput" class="k-textbox" style="width: 100px; margin: 0;" />
-                 <button click.delegate="setColor(colorInput.value)" class="k-button">Set value</button>
-             </li>
-             <li>
-               <button click.delegate="colorInput.value = color" class="k-button">Get value</button>
-             </li>
-         </ul>
-       </div>
-       <div class="box-col">
-         <h4>Enable/Disable</h4>
-         <ul class="options">
-             <li>
-                 <button click.delegate="colorPicker.enable()" class="k-button">Enable</button>
-                 <button click.delegate="colorPicker.enable(false)" class="k-button">Disable</button>
-             </li>
-         </ul>
-       </div>
-       <div class="box-col">
-         <h4>Open/Close</h4>
-         <ul class="options">
-             <li>
-                 <button click.delegate="colorPicker.open()" class="k-button">Open</button>
-                 <button click.delegate="colorPicker.close()" class="k-button">Close</button>
-             </li>
-         </ul>
+  <div id="colorpicker-api">
+     <div class="demo-section k-content">
+         <label for="colorpicker">ColorPicker:</label>
+         <input k-color-picker="k-widget.two-way: colorPicker; k-tool-icon: k-foreColor; k-value.two-way: color" />
+     </div>
+     <div class="box wide">
+         <div class="box-col">
+           <h4>Values</h4>
+           <ul class="options">
+               <li>
+                   <input ref="colorInput" class="k-textbox" style="width: 100px; margin: 0;" />
+                   <button click.delegate="setColor(colorInput.value)" class="k-button">Set value</button>
+               </li>
+               <li>
+                 <button click.delegate="getColor()" class="k-button">Get value</button>
+               </li>
+           </ul>
+         </div>
+         <div class="box-col">
+           <h4>Enable/Disable</h4>
+           <ul class="options">
+               <li>
+                   <button click.delegate="colorPicker.enable()" class="k-button">Enable</button>
+                   <button click.delegate="colorPicker.enable(false)" class="k-button">Disable</button>
+               </li>
+           </ul>
+         </div>
+         <div class="box-col">
+           <h4>Open/Close</h4>
+           <ul class="options">
+               <li>
+                   <button click.delegate="colorPicker.open()" class="k-button">Open</button>
+                   <button click.delegate="colorPicker.close()" class="k-button">Close</button>
+               </li>
+           </ul>
+        </div>
       </div>
     </div>
   </div>
