--- a/sample/src/samples/grid/advanced.html
+++ b/sample/src/samples/grid/advanced.html
@@ -16,7 +16,8 @@
     </k-col>
     <k-col k-title="Contact Name" k-field="ContactName">
       <k-template for="headerTemplate">
-        ${'a' + 'b'}
+        ${'Contact' + 'Name'}
+        <button k-button click.delegate="showAlert('Button clicked')">Test</button>
       </k-template>
     </k-col>
   </k-grid>
