chore(sample): css improvements

--- a/sample/src/samples/autocomplete/customizing-templates.html
+++ b/sample/src/samples/autocomplete/customizing-templates.html
@@ -10,7 +10,7 @@
                                         k-min-length: 1;
                                         k-header-template.bind: headerTemplate;
                                         k-template.bind: template;
-                                        k-data-text-field: ContactName" style="width: 100%" id="customers">
+                                        k-data-text-field: ContactName" style="width: 100%" id="autocomplete-customizing-templates-customers">
       </p>
       <p class="demo-hint">Start typing to find a customer. E.g. "Ann" </p>
     </div>
