--- a/sample/src/samples/datetimepicker/customizing-templates.html
+++ b/sample/src/samples/datetimepicker/customizing-templates.html
@@ -5,5 +5,6 @@
               k-month.bind: month;
               k-footer.bind: false;
               k-widget.two-way: datetimepicker"
+         id="datetimepicker-customizing-templates"
          k-on-open.delegate="onOpen()"/>
 </template>
