--- a/sample/src/samples/dropdownlist/customizing-templates.html
+++ b/sample/src/samples/dropdownlist/customizing-templates.html
@@ -1,34 +1,32 @@
 <template>
   <require from="./customizing-templates.css"></require>
   <div id="example">
-    <div id="dropdownlist-templates">
-      <div class="demo-section k-content">
-          <h4>Customers</h4>
-          <k-drop-down-list k-data-text-field="ContactName"
-                            k-data-value-field="CustomerID"
-                            k-height="400"
-                            k-data-source.bind="dataSource"
-                            id="customersdropdown"
-                            style="width: 100%">
-            <k-template for="headerTemplate">
-              <div class="dropdown-header k-widget k-header">
-                <span>Photo</span>
-                <span>Contact info</span>
-              </div>
-            </k-template>
-            <k-template>
-              <span class="k-state-default" style="background-image: url('http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg')"></span>
-              <span class="k-state-default">
-                <h3>${ContactName}</h3>
-                <p>${CompanyName}</p>
-              </span>
-            </k-template>
-            <k-template for="valueTemplate">
-              <span class="selected-value" style="background-image: url('http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg')"></span>
-              <span>${ContactName}</span>
-            </k-template>
-          </k-drop-down-list>
-      </div>
+    <div class="demo-section k-content">
+        <h4>Customers</h4>
+        <k-drop-down-list k-data-text-field="ContactName"
+                          k-data-value-field="CustomerID"
+                          k-height="400"
+                          k-data-source.bind="dataSource"
+                          id="dropdownlist-customizing-templates-customers"
+                          style="width: 100%">
+          <k-template for="headerTemplate">
+            <div class="dropdown-header k-widget k-header">
+              <span>Photo</span>
+              <span>Contact info</span>
+            </div>
+          </k-template>
+          <k-template>
+            <span class="k-state-default" style="background-image: url('http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg')"></span>
+            <span class="k-state-default">
+              <h3>${ContactName}</h3>
+              <p>${CompanyName}</p>
+            </span>
+          </k-template>
+          <k-template for="valueTemplate">
+            <span class="selected-value" style="background-image: url('http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg')"></span>
+            <span>${ContactName}</span>
+          </k-template>
+        </k-drop-down-list>
     </div>
   </div>
 </template>
