chore(sample): various edits of help documents

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -29,7 +29,8 @@
                    MOST POPULAR                                              <br>
                    <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
-                   <a>Editor</a>                                             <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/editor">Editor</a>                     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/scheduler">Scheduler</a>               <br>
                    <img src="images/blue.png">
@@ -70,8 +71,8 @@
                    <a href="#/samples/datetimepicker">DateTimePicker</a>     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
-                   <a>Editor</a>                                             <br>
                    <img src="images/blue.png">
+                   <a href="#/samples/editor">Editor</a>                     <br>                   <img src="images/blue.png">
                    <a href="#/samples/maskedtextbox">MaskedTextBox</a>       <br>
                    <a>MultiSelect</a>                                        <br>
                    <img src="images/blue.png">
