--- a/sample/src/samples/dropdownlist/virtualization.html
+++ b/sample/src/samples/dropdownlist/virtualization.html
@@ -2,14 +2,16 @@
     <div id="example">
         <div class="demo-section k-content">
             <h4>Search for shipping name</h4>
-            <k-drop-down-list k-template="<span class='order-id'>#= OrderID #</span> #= ShipName #, #= ShipCountry #"
-                              k-data-text-field="ShipName"
+            <k-drop-down-list k-data-text-field="ShipName"
                               k-data-value-field="OrderID"
                               k-filter="contains"
                               k-virtual.bind="virtual"
                               k-height.bind="290"
                               k-data-source.bind="dataSource"
                               style="width: 100%">
+              <k-template>
+                <span class='order-id'>${OrderID}</span> ${ShipName}, ${ShipCountry}
+              </k-template>
             </k-drop-down-list>
         </div>
     </div>
