chore(samples): map samples

--- a/sample/src/samples/map/api.html
+++ b/sample/src/samples/map/api.html
@@ -1,9 +1,57 @@
 <template>
   <div id="example">
-    <div id="editor-api">
-      <div style="text-align: center;">
-         <h4>Map api</h4>
+    <div class="box wide" id="mapConfig">
+      <div class="box-col">
+          <h4>Center</h4>
+          <ul class="options">
+              <li>
+                  <input k-numerictextbox="k-format: N4; k-value.two-way: lat; k-decimals.bind: 4"/>
+                  <input k-numerictextbox="k-format: N4; k-value.two-way: long; k-decimals.bind: 4"/>
+                  <button k-button click.delegate="centerMap()">center()</button>
+              </li>
+          </ul>
       </div>
+      <div class="box-col">
+          <h4>Zoom level</h4>
+          <ul class="options">
+              <li>
+                 <k-drop-down-list k-value.two-way="selectedZoom">
+                   <select>
+                        <option value="1">1 (min)</option>
+                        <option value="2">2</option>
+                        <option value="3" selected="selected">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18 (max)</option>
+                    </select>
+                  </k-drop-down-list>
+                  <button k-button click.delegate="zoom()">zoom()</button>
+              </li>
+          </ul>
+      </div>
+    </div>
+
+    <div style="text-align: center;">
+      <k-map k-center.bind = "center"
+             k-zoom.bind = "3"
+             k-layers.bind = "layers"
+             k-markers.bind = "markers"
+             k-on-pan-end.delegate="updateControls()"
+             k-on-zoom-end.delegate="updateControls()"
+             k-widget.bind="map">
+      </k-map>
     </div>
    </div>
 </template>
