--- a/sample/src/samples/map/basic-use.html
+++ b/sample/src/samples/map/basic-use.html
@@ -1,13 +1,11 @@
 <template >
   <div id="example">
-    <div id="map-basic-use">
-      <div style="text-align: center;">
-        <k-map k-center.bind = "center"
-               k-zoom.bind = 3
-               k-layers.bind = "layers"
-               k-markers.bind = "markers">
-        </k-map>
-      </div>
+    <div style="text-align: center;">
+      <k-map k-center.bind = "center"
+             k-zoom.bind = "3"
+             k-layers.bind = "layers"
+             k-markers.bind = "markers">
+      </k-map>
     </div>
    </div>
 </template>
