chore(all): add documents, fixes for typps

--- a/sample/src/samples/map/binding-markers-to-remote-data.html
+++ b/sample/src/samples/map/binding-markers-to-remote-data.html
@@ -3,7 +3,7 @@
     <div id="map-binding-markers-to-remote-data">
       <div style="text-align: center">
         <k-map k-center.bind = "center"
-               k-zoom.bind = 15
+               k-zoom.bind = "15"
                k-layers.bind = "layers">
         </k-map>
       </div>
