--- a/sample/src/samples/map/binding-to-geojson.html
+++ b/sample/src/samples/map/binding-to-geojson.html
@@ -3,7 +3,7 @@
     <div id="map-binding-to-geojson">
       <div style="text-align: center">
         <k-map k-center.bind = "center"
-               k-zoom.bind = 3
+               k-zoom.bind = "3"
                k-layers.bind = "layers">
         </k-map>
       </div>
