--- a/sample/src/samples/map/bing-tile-layer.html
+++ b/sample/src/samples/map/bing-tile-layer.html
@@ -3,7 +3,7 @@
     <div id="bing-tile-layer">
       <div style="text-align: center;">
          <k-map k-center.bind = "center"
-                k-zoom.bind = 3
+                k-zoom.bind = "3"
                 k-layers.bind = "layers">
          </k-map>
        </div>
