chore(sample): hide unfinished controls

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -159,13 +159,13 @@
                   <a href="#/samples/button">Button</a>                      <br>
                   <a>ButtonGroup</a>                                         <br>
                   <img src="images/orange.png">
-                  <a href="#/samples/menu">Menu</a>                      <br>
+                  <a href="#">Menu</a>                                       <br>
                   <img src="images/blue.png">
                   <a href="#/samples/panelbar">PanelBar</a>                  <br>
                   <img src="images/orange.png">
-                  <a href="#/samples/tabstrip">TabStrip</a>                  <br>
+                  <a href="#">TabStrip</a>                                   <br>
                   <img src="images/orange.png">
-                  <a href="#/samples/toolbar">ToolBar</a>                    <br>
+                  <a href="#">ToolBar</a>                                    <br>
                   <img src="images/blue.png">
                   <a href="#/samples/treeview">TreeView</a>                  <br>
                   <br>
