feat(gauges): add linear and radial gauges

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -123,13 +123,16 @@
                   <a href="#/samples/waterfall-charts">Waterfall Charts</a>  <br>
                   <br>
                   GAUGES                                                     <br>
-                  <a>Linear Gauge</a>                                        <br>
-                  <a>Radial Gauge</a>                                        <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/linear-gauge">Linear Gauge</a>          <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/radial-gauge">Radial Gauge</a>          <br>
               </div>
 
               <div class="col-xs-12 col-sm-2">
                   BARCODES                                                   <br>
-                  <a>Barcode</a>                                             <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/barcode">Barcode</a>                    <br>
                   <a>QR Code</a>                                             <br>
                   <br>
                   DIAGRAMS & MAPS                                            <br>
