feat(diagram): added diagram wrapper

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -136,7 +136,8 @@
                   <a>QR Code</a>                                             <br>
                   <br>
                   DIAGRAMS & MAPS                                            <br>
-                  <a>Diagram</a>                                             <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/diagram">Diagram</a>                    <br>
                   <img src="images/blue.png">
                   <a href="#/samples/map">Map</a>                            <br>
                   <br>
@@ -173,7 +174,8 @@
                   <a href="#/samples/treeview">TreeView</a>                  <br>
                   <br>
                   INTERACTIVITY &amp; UX                                     <br>
-                  <a>Drag &amp; Drop</a>                                     <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/drag-and-drop">Drag &amp; Drop</a>      <br>
                   <a>Effects</a>                                             <br>
                   <img src="images/blue.png">
                   <a href="#/samples/progressbar">ProgressBar</a>            <br>
