refactor(editor): rename k-editor to k-rich-editor
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/365

--- a/sample/src/samples/editor/api.html
+++ b/sample/src/samples/editor/api.html
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <textarea k-editor="k-resizable.bind: resizable; k-widget.two-way: editor"
+        <textarea k-rich-editor="k-resizable.bind: resizable; k-widget.two-way: editor"
                   style="height:440px">
         &lt;p&gt;&lt;img src=&quot;http://demos.telerik.com/kendo-ui/content/web/editor/kendo-ui-web.png&quot; alt=&quot;Editor for ASP.NET MVC logo&quot; style=&quot;display:block;margin-left:auto;margin-right:auto;&quot; /&gt;&lt;/p&gt;
         &lt;p&gt;
