--- a/sample/src/samples/editor/events.html
+++ b/sample/src/samples/editor/events.html
@@ -1,6 +1,6 @@
 <template >
     <div id="example">
-        <textarea k-editor="k-resizable.bind: resizable"
+        <textarea k-rich-editor="k-resizable.bind: resizable"
                   k-on-change.delegate="onChange($event.detail)"
                   k-on-select.delegate="onSelect($event.detail)"
                   k-on-execute.delegate="onExecute($event.detail)"
