--- a/sample/src/samples/switch/value-binding.html
+++ b/sample/src/samples/switch/value-binding.html
@@ -3,6 +3,7 @@
   <div id="example">
       <div class="demo-section k-content">
         <p>Notifications are ${isChecked ? 'enabled' : 'disabled'}</p>
+        <input type="checkbox" checked.bind="isChecked"/>
 
         <div class="settings-head"></div>
         <ul>
