chore(help): refresh about-this-application section

--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -17,7 +17,7 @@
         <a href="#">Theme</a>
     </li>
     <li>
-        <a route-href="route: help">Help/Docs</a>
+        <a route-href="route: help">Docs</a>
     </li>
   </ul>
 
