--- a/sample/src/samples/autocomplete/api.html
+++ b/sample/src/samples/autocomplete/api.html
@@ -5,10 +5,11 @@
   <div id="example">
     <div class="demo-section k-content">
       <p><strong>Pick a color:</strong></p>
-      <p>
-          <input k-autocomplete="k-data-source.bind: items; k-widget.two-way: autocomplete"
-                 style="width: 100%;">
-      </p>
+
+      <k-autocomplete k-data-source.bind="items" k-widget.two-way="autocomplete">
+        <input style="width: 100%"/>
+      </k-autocomplete>
+
       <p class="demo-hint">Hint: type "red"</p>
     </div>
 
