--- a/sample/src/samples/autocomplete/basic-use.html
+++ b/sample/src/samples/autocomplete/basic-use.html
@@ -2,7 +2,9 @@
   <div id="example">
     <div class="demo-section k-content">
       <p><strong>People:</strong></p>
-      <input k-autocomplete="k-data-source.bind: items;" style="width: 100%;">
+      <k-autocomplete k-data-source.bind="items">
+        <input style="width: 100%;">
+      </k-autocomplete>
       <p class="demo-hint" style="word-break: break-all">Type a name, available values in the list are: ${ items } </p>
     </div>
   </div>
