--- a/sample/src/samples/autocomplete/customizing-templates.html
+++ b/sample/src/samples/autocomplete/customizing-templates.html
@@ -4,14 +4,25 @@
   <div id="example">
     <div class="demo-section k-content">
       <p><strong>Customers:</strong></p>
-      <p>
-          <input k-autocomplete="k-data-source.bind: datasource;
-                                        k-height: 400;
-                                        k-min-length: 1;
-                                        k-header-template.bind: headerTemplate;
-                                        k-template.bind: template;
-                                        k-data-text-field: ContactName" style="width: 100%" id="autocomplete-customizing-templates-customers">
-      </p>
+
+      <k-autocomplete k-data-source.bind="datasource"
+                      k-height.bind="400"
+                      k-min-length.bind="1"
+                      k-data-text-field="ContactName">
+        <k-template>
+          <span class="k-state-default" style="background-image: url('http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg')"></span>
+          <span class="k-state-default"><h3>${ContactName}</h3><p>${CompanyName}</p></span>
+        </k-template>
+        <k-template for='headerTemplate'>
+          <div class="dropdown-header k-widget k-header">
+            <span>Photo</span>
+            <span>Contact info</span>
+          </div>
+        </k-template>
+
+        <input id="autocomplete-customizing-templates-customers" style="width: 100%"/>
+      </k-autocomplete>
+
       <p class="demo-hint">Start typing to find a customer. E.g. "Ann" </p>
     </div>
   </div>
