--- a/sample/src/samples/autocomplete/events.html
+++ b/sample/src/samples/autocomplete/events.html
@@ -2,16 +2,15 @@
   <div id="example">
     <div class="demo-section k-content">
       <p><strong>Select a state in USA:</strong></p>
-      <p>
-          <input k-autocomplete="k-data-source.bind: items;"
-                 k-on-open.delegate="logger.log('open')"
-                 k-on-close.delegate="logger.log('close')"
-                 k-on-change.delegate="logger.log('change')"
-                 k-on-select.delegate="logger.log('select')"
-                 k-on-data-bound.delegate="logger.log('dataBound')"
-                 k-on-filtering.delegate="logger.log('filtering')"
-                 style="width: 100%;">
-      </p>
+      <k-autocomplete k-data-source.bind="items"
+                      k-on-open.delegate="logger.log('open')"
+                      k-on-close.delegate="logger.log('close')"
+                      k-on-change.delegate="logger.log('change')"
+                      k-on-select.delegate="logger.log('select')"
+                      k-on-data-bound.delegate="logger.log('dataBound')"
+                      k-on-filtering.delegate="logger.log('filtering')">
+        <input style="width: 100%;">
+      </k-autocomplete>
       <p class="demo-hint">Hint: type "m"</p>
     </div>
 
