--- a/sample/src/samples/autocomplete/grouping.html
+++ b/sample/src/samples/autocomplete/grouping.html
@@ -2,11 +2,13 @@
   <div id="example">
     <div class="demo-section k-content">
       <p><strong>Find a customer:</strong></p>
-      <p>
-          <input k-autocomplete="k-data-source.bind: datasource;
-                                 k-height.bind: 400;
-                                 k-data-text-field: ContactName" style="width: 100%">
-      </p>
+
+      <k-autocomplete k-data-source.bind="datasource"
+                      k-height.bind="400"
+                      k-data-text-field="ContactName">
+        <input style="width: 100%">
+      </k-autocomplete>
+
       <p class="demo-hint"> Hint: type "an" </p>
     </div>
   </div>
