--- a/sample/src/samples/autocomplete/value-binding.html
+++ b/sample/src/samples/autocomplete/value-binding.html
@@ -2,7 +2,12 @@
   <div id="example">
     <div class="demo-section k-content">
       <p><strong>People:</strong></p>
-      <input k-autocomplete="k-data-source.bind: items; k-value.two-way: selectedValue" style="width: 100%;">
+
+      <k-autocomplete k-data-source.bind="items"
+                      k-value.two-way="selectedValue">
+        <input style="width: 100%;">
+      </k-autocomplete>
+
       <p class="demo-hint" style="word-break: break-all">Type a name, available values in the list are: ${ items } </p>
 
       <p>Selected value: ${selectedValue}</p>
