--- a/sample/src/samples/autocomplete/virtualization.html
+++ b/sample/src/samples/autocomplete/virtualization.html
@@ -2,11 +2,19 @@
   <div id="example">
     <div class="demo-section k-content">
       <h4>Search for shipping name</h4>
-      <input k-autocomplete="k-data-source.bind: datasource;
-                                    k-virtual.bind: virtual;
-                                    k-data-text-field: ShipName;
-                                    k-height.bind: 520;
-                                    k-template.bind: template" style="width: 100%;" />
+
+      <k-autocomplete k-data-source.bind="datasource"
+                      k-virtual.bind="virtual"
+                      k-data-text-field="ShipName"
+                      k-height.bind="520">
+        <k-template>
+          <span class="order-id">${OrderID}</span>
+          ${ShipName}, ${ShipCountry}
+        </k-template>
+
+        <input style="width: 100%;" />
+      </k-autocomplete>
+
       <div class="demo-hint">Hint: type "an"</div>
     </div>
   </div>
