--- a/sample/src/installation/index.html
+++ b/sample/src/installation/index.html
@@ -1,24 +1,3 @@
 <template>
-  <section>
-      <h4>Aurelia-KendoUI-bridge installation</h4>
-
-        <div k-tabstrip="k-animation.bind: false" k-on-select.delegate="tabChanged($event.detail)" k-tabstrip.ref="tabstrip">
-          <ul>
-              <li ref="installation" data-type="installation" class="k-state-active">Installation</li>
-              <li ref="core" data-type="core">New from Github: Kendo Core</li>
-              <li ref="jspmGit" data-type="jspmGit">New from Telerik: JSPM-git</li>
-              <li ref="vendors" data-type="vendors">Having KendoUI already: Vendors</li>
-          </ul>
-          <div>
-            <au-markdown url="installation/installation.md"></au-markdown>
-          </div>
-          <div>
-            <au-markdown url="installation/core.md"></au-markdown>
-          </div>
-          <div>
-            <au-markdown url="installation/jspm-git.md"></au-markdown>
-          </div>
-          <div>
-            <au-markdown url="installation/vendors.md"></au-markdown>
-          </div>
+  <router-view></router-view>
 </template>
