--- a/sample/src/samples/listview/editing.html
+++ b/sample/src/samples/listview/editing.html
@@ -5,7 +5,7 @@
 
   <div id="listview-editing">
     <k-list-view k-data-source.bind="dataSource">
-      <k-list-template>
+      <k-template>
         <div class="product-view k-widget" data-uid="${uid}">
           <dl>
             <dt>Product Name</dt>
@@ -22,8 +22,8 @@
             <a class="k-button k-delete-button"><span class="k-icon k-delete"></span></a>
           </div>
         </div>
-      </k-list-template>
-      <k-list-edit-template>
+      </k-template>
+      <k-template for="editTemplate">
         <div class="product-view k-widget">
           <dl>
             <dt>Product Name</dt>
@@ -49,7 +49,7 @@
             <a class="k-button k-cancel-button"><span class="k-icon k-cancel"></span></a>
           </div>
         </div>
-      </k-list-edit-template>
+      </k-template>
     </k-list-view>
 
     <div ref="pager" class="k-pager-wrap"></div>
