--- a/sample/src/samples/listview/selection.html
+++ b/sample/src/samples/listview/selection.html
@@ -5,13 +5,13 @@
                  k-widget.bind="listView"
                  k-on-data-bound.delegate="dataBound()"
                  k-on-change.delegate="change()">
-      <k-list-template>
+      <k-template>
         <div class="product">
             <img src="http://demos.telerik.com/kendo-ui/content/web/foods/${ProductID}.jpg" alt="${ProductName} image" />
             <h3>${ProductName}</h3>
             <p>${UnitPrice}</p>
         </div>
-      </k-list-template>
+      </k-template>
     </k-list-view>
 
     <div ref="pager" class="k-pager-wrap"></div>
