chore(sample): pivot grid samples

--- a/sample/src/samples/pivotgrid/templates.html
+++ b/sample/src/samples/pivotgrid/templates.html
@@ -1,27 +1,37 @@
 <template>
   <div id="example">
-    <!-- var columnMember = columnTuple ? columnTuple.members[0] : { children: [] };
-    var rowMember = rowTuple ? rowTuple.members[0] : { children: [] };
-    var value = kendo.toString(kendo.parseFloat(dataItem.value) || "N/A", "c2"); -->
+
+    <p> Unfortunately, the pivotgrid does not call the hook used for template compilation. By setting kend-template to true it's possible to define Kendo templates instead </p> 
+
     <k-pivot-grid k-column-width.bind="200"
                   k-height.bind="320"
                   k-data-source.bind="dataSource">
-        <k-template for="dataCellTemplate">
-          <span show.bind="columnMember.children.length || rowMember.children.length">
-            <em style="color: red">${getTotal(value) | kendoToString} (total)</em>
-          </span>
+        <k-template for="dataCellTemplate" kendo-template.bind="true">
+          # var columnMember = columnTuple ? columnTuple.members[0] : { children: [] }; #
+          # var rowMember = rowTuple ? rowTuple.members[0] : { children: [] }; #
+          # var value = kendo.toString(kendo.parseFloat(dataItem.value) || "N/A", "c2"); #
 
-          <span show.bind="!(columnMember.children.length || rowMember.children.length)">${getTotal(value) | kendoToString}</span>
+          # if (columnMember.children.length || rowMember.children.length) { #
+              <em  style="color: red">#: value # (total)</em>
+          # } else { #
+              #: value #
+          # } #
         </k-template>
 
-        <k-template for="headerTemplate">
-          <span show.bind="member.children.length">${member.caption}</span>
-          <span show.bind="!member.children.length"><em>${member.caption}</em></span>
+        <k-template for="columnHeaderTemplate" kendo-template.bind="true">
+          # if (!member.children.length) { #
+              <em>#: member.caption #</em>
+          # } else { #
+              #: member.caption #
+          # } #
         </k-template>
 
-        <k-template for="rowHeaderTemplate">
-          <span show.bind="member.children.length">${member.caption}</span>
-          <span show.bind="!member.children.length"><em>${member.caption}</em></span>
+        <k-template for="rowHeaderTemplate" kendo-template.bind="true">
+          # if (!member.children.length) { #
+              <em>#: member.caption #</em>
+          # } else { #
+              #: member.caption #
+          # } #
         </k-template>
     </k-pivot-grid>
 
