--- a/sample/src/samples/toolbar/basic-use.html
+++ b/sample/src/samples/toolbar/basic-use.html
@@ -1,2 +1,47 @@
 <template>
+  <div id="example">
+    <div class="demo-section k-content wide">
+      <k-toolbar>
+        <k-toolbar-item k-type="button" k-text="Button"></k-toolbar-item>
+        <k-toolbar-item k-type="button" k-text="Toggle Button" k-toggable.bind="true"></k-toolbar-item>
+        <k-toolbar-item k-type="splitButton" k-text="Insert" k-menu-buttons.bind="[
+          { text: 'Insert above', icon: 'insert-n' },
+          { text: 'Insert between', icon: 'insert-m' },
+          { text: 'Insert below', icon: 'insert-s' }
+        ]"></k-toolbar-item>
+        <k-toolbar-item k-type="separator"></k-toolbar-item>
+        <k-toolbar-item>
+          <k-template>
+            <label>Format:</label>
+          </k-template>
+        </k-toolbar-item>
+        <k-toolbar-item k-overflow="never">
+          <k-template>
+            <k-drop-down-list>
+              <select>
+                <option>test</option>
+                <option>test1</option>
+              </select>
+            </k-drop-down-list>
+          </k-template>
+        </k-toolbar-item>
+        <k-toolbar-item k-type="separator"></k-toolbar-item>
+        <k-toolbar-item k-type="buttonGroup"
+                        k-buttons.bind="[
+          { spriteCssClass: 'k-tool-icon k-justifyLeft', text: 'Left', togglable: true, group: 'text-align' },
+          { spriteCssClass: 'k-tool-icon k-justifyCenter', text: 'Center', togglable: true, group: 'text-align' },
+          { spriteCssClass: 'k-tool-icon k-justifyRight', text: 'Right', togglable: true, group: 'text-align' }
+        ]"></k-toolbar-item>
+        <k-toolbar-item k-type="buttonGroup"
+                        k-buttons.bind="[
+          { spriteCssClass: 'k-tool-icon k-bold', text: 'Bold', togglable: true, showText: 'overflow' },
+          { spriteCssClass: 'k-tool-icon k-italic', text: 'Italic', togglable: true, showText: 'overflow' },
+          { spriteCssClass: 'k-tool-icon k-underline', text: 'Underline', togglable: true, showText: 'overflow' }
+        ]"></k-toolbar-item>
+        <k-toolbar-item k-type="button" k-text="Action" k-overflow="always"></k-toolbar-item>
+        <k-toolbar-item k-type="button" k-text="Another Action" k-overflow="always"></k-toolbar-item>
+        <k-toolbar-item k-type="button" k-text="Something else here" k-overflow="always"></k-toolbar-item>
+      </k-toolbar>
+    </div>
+  </div>
 </template>
