chore(sample): add switch component to project status page

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -72,7 +72,8 @@
                    <img src="images/blue.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
                    <img src="images/blue.png">
-                   <a href="#/samples/editor">Editor</a>                     <br>                   <img src="images/blue.png">
+                   <a href="#/samples/editor">Editor</a>                     <br>
+                   <img src="images/blue.png">
                    <a href="#/samples/maskedtextbox">MaskedTextBox</a>       <br>
                    <a>MultiSelect</a>                                        <br>
                    <img src="images/blue.png">
@@ -82,7 +83,8 @@
                    <img src="images/blue.png">
                    <a href="#/samples/timepicker">TimePicker</a>             <br>
                    <a>Upload</a>                                             <br>
-                   <a>Switch</a>                                             <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/switch">Switch</a>                     <br>
               </div>
 
               <div class="col-xs-12 col-sm-2">
