--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -1,6 +1,7 @@
 <template>
    <div class="col-md-12">
-     <h4>Project status</h4>
+     <h4>Catalog index</h4>
+     <span>While still in development, this page provides the current availability status.</span>
      <section>
        <div>
            <br>
