Revert "chore(sample): reclassify switch control as a part of KendoUI core"
This reverts commit 83f7af74bd82452852869554fabd5ffa29dcaaab.

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -1,7 +1,6 @@
 <template>
    <div class="col-md-12">
-     <h4>Catalog index</h4>
-     <span>While still in development, this page provides the current availability status.</span>
+     <h4>Project status</h4>
      <section>
        <div>
            <br>
