--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -11,7 +11,7 @@
         <a route-href="route: installation">Installation</a>
     </li>
     <li>
-        <a route-href="route: project-status">Catalog index</a>
+        <a route-href="route: project-status">Project status</a>
     </li>
     <li click.delegate="showThemeDialog()">
         <a href="#">Theme</a>
