--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -1,7 +1,6 @@
 <template>
    <div class="col-md-12">
-     <h4>Catalog index</h4>
-     <span>While still in development, this page provides the current availability status of all components.</span>
+     <h4>Project status</h4>
      <section>
        <div>
            <br>
