--- a/sample/src/samples/toolbar/basic-use.html
+++ b/sample/src/samples/toolbar/basic-use.html
@@ -3,7 +3,7 @@
     <div class="demo-section k-content wide">
       <k-toolbar>
         <k-toolbar-item k-type="button" k-text="Button"></k-toolbar-item>
-        <k-toolbar-item k-type="button" k-text="Toggle Button" k-toggable.bind="true"></k-toolbar-item>
+        <k-toolbar-item k-type="button" k-text="Toggle Button" k-togglable.bind="true"></k-toolbar-item>
         <k-toolbar-item k-type="splitButton" k-text="Insert" k-menu-buttons.bind="[
           { text: 'Insert above', icon: 'insert-n' },
           { text: 'Insert between', icon: 'insert-m' },
@@ -17,27 +17,30 @@
         </k-toolbar-item>
         <k-toolbar-item k-overflow="never">
           <k-template>
-            <k-drop-down-list>
-              <select>
-                <option>test</option>
-                <option>test1</option>
-              </select>
+            <k-drop-down-list k-option-label="Paragraph"
+                              k-data-text-field="text"
+                              k-data-value-field="value"
+                              k-data-source.bind="[
+                                { text: 'Heading 1', value: 1 },
+                                { text: 'Heading 2', value: 2 },
+                                { text: 'Heading 3', value: 3 },
+                                { text: 'Title', value: 4 },
+                                { text: 'Subtitle', value: 5 }
+                              ]">
             </k-drop-down-list>
           </k-template>
         </k-toolbar-item>
         <k-toolbar-item k-type="separator"></k-toolbar-item>
-        <k-toolbar-item k-type="buttonGroup"
-                        k-buttons.bind="[
-          { spriteCssClass: 'k-tool-icon k-justifyLeft', text: 'Left', togglable: true, group: 'text-align' },
-          { spriteCssClass: 'k-tool-icon k-justifyCenter', text: 'Center', togglable: true, group: 'text-align' },
-          { spriteCssClass: 'k-tool-icon k-justifyRight', text: 'Right', togglable: true, group: 'text-align' }
-        ]"></k-toolbar-item>
-        <k-toolbar-item k-type="buttonGroup"
-                        k-buttons.bind="[
-          { spriteCssClass: 'k-tool-icon k-bold', text: 'Bold', togglable: true, showText: 'overflow' },
-          { spriteCssClass: 'k-tool-icon k-italic', text: 'Italic', togglable: true, showText: 'overflow' },
-          { spriteCssClass: 'k-tool-icon k-underline', text: 'Underline', togglable: true, showText: 'overflow' }
-        ]"></k-toolbar-item>
+        <k-toolbar-item k-type="buttonGroup">
+          <k-toolbar-item-button k-sprite-css-class="k-tool-icon k-justifyLeft" k-text="Left" k-togglable.bind="true" k-group="text-align"></k-toolbar-item-button>
+          <k-toolbar-item-button k-sprite-css-class="k-tool-icon k-justifyCenter" k-text="Center" k-togglable.bind="true" k-group="text-align"></k-toolbar-item-button>
+          <k-toolbar-item-button k-sprite-css-class="k-tool-icon k-justifyRight" k-text="Right" k-togglable.bind="true" k-group="text-align"></k-toolbar-item-button>
+        </k-toolbar-item>
+        <k-toolbar-item k-type="buttonGroup">
+          <k-toolbar-item-button k-sprite-css-class="k-tool-icon k-bold" k-text="Bold" k-togglable.bind="true" k-show-text="overflow"></k-toolbar-item>
+          <k-toolbar-item-button k-sprite-css-class="k-tool-icon k-italic" k-text="Italic" k-togglable.bind="true" k-show-text="overflow"></k-toolbar-item>
+          <k-toolbar-item-button k-sprite-css-class="k-tool-icon k-underline" k-text="Underline" k-togglable.bind="true" k-show-text="overflow"></k-toolbar-item>
+        </k-toolbar-item>
         <k-toolbar-item k-type="button" k-text="Action" k-overflow="always"></k-toolbar-item>
         <k-toolbar-item k-type="button" k-text="Another Action" k-overflow="always"></k-toolbar-item>
         <k-toolbar-item k-type="button" k-text="Something else here" k-overflow="always"></k-toolbar-item>
