--- a/sample/src/samples/tooltip/content-template.html
+++ b/sample/src/samples/tooltip/content-template.html
@@ -5,7 +5,7 @@
     <div class="demo-section k-content wide">
       <ul id="products"
           class="dairy-photos"
-          k-tooltip="k-filter: a; k-content.bind: template.innerHTML; k-width.bind: 400; k-height.bind: 200; k-position: top">
+          k-tooltip="k-filter: a; k-content.call: getTemplate($event); k-width.bind: 400; k-height.bind: 200; k-position: top">
         <li>
           <a href="#" data-id="11" title="A cheese made in the artisan tradition by rural dairy farmers in the north of Spain"><img src="http://demos.telerik.com/kendo-ui/content/web/foods/11.jpg" /> Queso de Cabrales</a>
         </li><li>
