--- a/sample/src/samples/menu/direction.html
+++ b/sample/src/samples/menu/direction.html
@@ -1,2 +1,167 @@
 <template>
+  <div id="example">
+
+    <div class="demo-section k-content">
+
+      <ul id="menu" k-menu k-menu.ref="menuVM">
+        <li>
+          Men's
+          <ul>
+            <li>Footwear
+              <ul>
+                <li>Leisure Trainers</li>
+                <li>Running Shoes</li>
+                <li>Outdoor Footwear</li>
+                <li>Sandals/Flip Flops</li>
+                <li>Footwear Accessories</li>
+
+              </ul>
+            </li>
+            <li>Leisure Clothing
+              <ul>
+                <li>T-Shirts</li>
+                <li>Hoodies &amp; Sweatshirts</li>
+                <li>Jackets</li>
+                <li>Pants</li>
+                <li>Shorts</li>
+              </ul>
+            </li>
+            <li>Sports Clothing
+              <ul>
+                <li>Football</li>
+                <li>Basketball</li>
+                <li>Golf</li>
+                <li>Tennis</li>
+                <li>Swimwear</li>
+              </ul>
+            </li>
+            <li>Accessories
+            </li>
+          </ul>
+        </li>
+        <li>
+          Women's
+          <ul>
+            <li>Footwear
+              <ul>
+                <li>Leisure Trainers</li>
+                <li>Running Shoes</li>
+                <li>Outdoor Footwear</li>
+                <li>Sandals/Flip Flops</li>
+                <li>Footwear Accessories</li>
+
+              </ul>
+            </li>
+            <li>Leisure Clothing
+              <ul>
+                <li>T-Shirts</li>
+                <li>Jackets</li>
+              </ul>
+            </li>
+            <li>Sports Clothing
+              <ul>
+                <li>Basketball</li>
+                <li>Golf</li>
+                <li>Tennis</li>
+                <li>Swimwear</li>
+              </ul>
+            </li>
+            <li>Accessories
+            </li>
+          </ul>
+        </li>
+        <li>
+          Boy's
+          <ul>
+            <li>Footwear
+              <ul>
+                <li>Leisure Trainers</li>
+                <li>Running Shoes</li>
+                <li>Outdoor Footwear</li>
+                <li>Sandals/Flip Flops</li>
+                <li>Footwear Accessories</li>
+              </ul>
+            </li>
+            <li>Leisure Clothing
+              <ul>
+                <li>T-Shirts</li>
+                <li>Hoodies &amp; Sweatshirts</li>
+                <li>Jackets</li>
+                <li>Pants</li>
+                <li>Shorts</li>
+              </ul>
+            </li>
+            <li>Sports Clothing
+              <ul>
+                <li>Football</li>
+                <li>Basketball</li>
+                <li>Rugby</li>
+                <li>Tennis</li>
+                <li>Swimwear</li>
+              </ul>
+            </li>
+            <li>Accessories
+            </li>
+          </ul>
+        </li>
+        <li>
+          Girl's
+          <ul>
+            <li>Footwear
+              <ul>
+                <li>Leisure Trainers</li>
+                <li>Running Shoes</li>
+                <li>Fitness Trainers</li>
+                <li>Sandals/Flip Flops</li>
+                <li>Footwear Accessories</li>
+              </ul>
+            </li>
+            <li>Leisure Clothing
+              <ul>
+                <li>T-Shirts</li>
+                <li>Hoodies &amp; Sweatshirts</li>
+                <li>Jackets</li>
+                <li>Pants</li>
+                <li>Shorts</li>
+              </ul>
+            </li>
+            <li>Sports Clothing
+              <ul>
+                <li>Basketball</li>
+                <li>Tennis</li>
+                <li>Swimwear</li>
+              </ul>
+            </li>
+            <li>Accessories
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+    </div>
+
+    <div class="box">
+      <h4>Direction Settings</h4>
+      <ul class="options">
+        <li>
+          <input id="default" name="direction" value="bottom" type="radio" checked.bind="direction" /> <label for="default">default / bottom</label>
+        </li>
+        <li>
+          <input id="left" name="direction" value="left" type="radio" checked.bind="direction" /> <label for="left">left</label>
+        </li>
+        <li>
+          <input id="right" name="direction" value="right" type="radio" checked.bind="direction" /> <label for="right">right</label>
+        </li>
+        <li>
+          <input id="top" name="direction" value="top" type="radio" checked.bind="direction" /> <label for="top">top</label>
+        </li>
+        <li>
+          <input id="custom" name="direction" type="radio" model.bind="undefined" checked.bind="direction" /> <label for="custom">custom:</label>
+          <input value.bind="customValue" type="text" class="k-textbox customValue" />
+        </li>
+      </ul>
+      <br />
+      <button k-button click.delegate="apply()" style="width: 80px;">Apply</button>
+    </div>
+  </div>
 </template>
