chore(samples): updated project status

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -43,7 +43,8 @@
                    <img src="images/blue.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
                    <a>Window</a>                                             <br>
-                   <a>Upload</a>                                             <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/upload">Upload</a>                     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/treeview">TreeView</a>                 <br>
                </div>
@@ -54,7 +55,8 @@
                    <a href="#/samples/grid">Grid</a>                         <br>
                    <a>Spreadsheet</a>                                        <br>
                    <a>Listview</a>                                           <br>
-                   <a>Pivot Grid</a>                                         <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/pivotgrid">Pivot Grid</a>              <br>
                    <img src="images/blue.png">
                    <a href="#/samples/treelist">TreeList</a>                 <br>
                    <a>ScrollView</a>                                         <br>
@@ -76,14 +78,16 @@
                    <a href="#/samples/editor">Editor</a>                     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/maskedtextbox">MaskedTextBox</a>       <br>
-                   <a>MultiSelect</a>                                        <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/multiselect">MultiSelect</a>           <br>
                    <img src="images/blue.png">
                    <a href="#/samples/numerictextbox">Numeric TextBox</a>    <br>
                    <img src="images/blue.png">
                    <a href="#/samples/slider">Slider</a>                     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/timepicker">TimePicker</a>             <br>
-                   <a>Upload</a>                                             <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/upload">Upload</a>                     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/switch">Switch</a>                     <br>
               </div>
@@ -172,8 +176,8 @@
                   <a href="#/samples/panelbar">PanelBar</a>                  <br>
                   <img src="images/orange.png">
                   <a href="#">TabStrip</a>                                   <br>
-                  <img src="images/orange.png">
-                  <a href="#">ToolBar</a>                                    <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/toolbar">ToolBar</a>                    <br>
                   <img src="images/blue.png">
                   <a href="#/samples/treeview">TreeView</a>                  <br>
                   <br>
