chore(sample): updated project status

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -42,7 +42,8 @@
                    <a href="#/samples/stock">Stock Charts</a>                <br>
                    <img src="images/blue.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
-                   <a>Window</a>                                             <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/window">Window</a>                     <br>
                    <img src="images/blue.png">
                    <a href="#/samples/upload">Upload</a>                     <br>
                    <img src="images/blue.png">
@@ -53,7 +54,8 @@
                    DATA MANAGEMENT                                           <br>
                    <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
-                   <a>Spreadsheet</a>                                        <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/spreadsheet">Spreadsheet</a>           <br>
                    <img src="images/blue.png">
                    <a href="#/samples/listview">Listview</a>                 <br>
                    <img src="images/blue.png">
@@ -164,19 +166,22 @@
 
               <div class="col-xs-12 col-sm-2">
                   LAYOUT                                                     <br>
-                  <a>Notification</a>                                        <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/notification">Notification</a>          <br>
                   <a>Responsive Panel</a>                                    <br>
                   <a>Splitter</a>                                            <br>
-                  <a>Tooltip</a>                                             <br>
-                  <a>Window</a>                                              <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/tooltip">Tooltip</a>                    <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/window">Window</a>                      <br>
                   <br>
                   NAVIGATION                                                 <br>
                   <img src="images/blue.png">
                   <a href="#/samples/button">Button</a>                      <br>
                   <img src="images/blue.png">
                   <a href="#/samples/buttongroup">ButtonGroup</a>            <br>
-                  <img src="images/orange.png">
-                  <a href="#">Menu</a>                                       <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/menu">Menu</a>                          <br>
                   <img src="images/blue.png">
                   <a href="#/samples/panelbar">PanelBar</a>                  <br>
                   <img src="images/orange.png">
